ikiwiki (2.67) UNRELEASED; urgency=low

  * remove: Avoid $_ breakage. (Stupid, stupid perl.)
  * Updated Spanish translation from Victor Moral.

 -- Joey Hess <joeyh@debian.org>  Mon, 06 Oct 2008 16:07:50 -0400

ikiwiki (2.66) unstable; urgency=low

  * recentchanges: Fix redirects to non-page files. 
  * aggregate: Avoid uninitialized value warnings for pages with no recorded
    ctime.
  * attachment: Add admin() pagespec to test if the uploading user is a wiki
    admin.
  * git: Fix handling of utf-8 filenames in recentchanges.
  * tag: Make edit link for new tags ensure that the tags are created
    inside tagbase, when it's set.
  * template: Make edit link for new templates ensure the page is located
    under toplevel templates directory.
  * htmlscrubber: Add a config setting that can be used to disable the
    scrubber acting on a set of pages.
  * Expand usage message and add --help. Closes: #500344
  * Beautify urls used in various places. (smcv)
  * Export pagetitle, titlepage, linkpage.
  * htmltidy: Avoid returning undef if tidy fails. Also avoid returning the
    untidied content if tidy crashes. In either case, it seems best to tidy
    the content to nothing.
  * htmltidy: Avoid spewing tidy errors to stderr.
  * Reorganize index file, add a format version field. Upgrades to the new
    index format should be transparent.
  * Add %wikistate, which is like %pagestate except not specific to a given
    page, and is preserved across rebuilds.
  * editpage: Be more aggressive (and less buggy) about cleaning up
    temporary files rendered during page preview.
  * Add an indexpages option, which causes foo/index.mdwn to be the source
    for page foo when foo.mdwn doesn't exist. Also, when it's enabled,
    creating a new page will save it to foo/index.mdwn by default.
    Closes: #474611
    (Sponsored by The TOVA Company.)
  * httpauth: Document that ikiwiki.cgi has to be in a directory subject to
    authentication. Closes: #500524 