@@ -1919,4 +1919,61 @@ sub match_creation_year ($$;@) { #{{{
 	}
 } #}}}
 
+sub match_user ($$;@) { #{{{
+	shift;
+	my $user=shift;
+	my %params=@_;
+	
+	if (! exists $params{user}) {
+		return IkiWiki::FailReason->new("no user specified");
+	}
+
+	if (defined $params{user} && lc $params{user} eq lc $user) {
+		return IkiWiki::SuccessReason->new("user is $user");
+	}
+	elsif (! defined $params{user}) {
+		return IkiWiki::FailReason->new("not logged in");
+	}
+	else {
+		return IkiWiki::FailReason->new("user is $params{user}, not $user");
+	}
+} #}}}
+
+sub match_admin ($$;@) { #{{{
+	shift;
+	shift;
+	my %params=@_;
+	
+	if (! exists $params{user}) {
+		return IkiWiki::FailReason->new("no user specified");
+	}
+
+	if (defined $params{user} && IkiWiki::is_admin($params{user})) {
+		return IkiWiki::SuccessReason->new("user is an admin");
+	}
+	elsif (! defined $params{user}) {
+		return IkiWiki::FailReason->new("not logged in");
+	}
+	else {
+		return IkiWiki::FailReason->new("user is not an admin");
+	}
+} #}}}
+
+sub match_ip ($$;@) { #{{{
+	shift;
+	my $ip=shift;
+	my %params=@_;
+	
+	if (! exists $params{ip}) {
+		return IkiWiki::FailReason->new("no IP specified");
+	}
+
+	if (defined $params{ip} && lc $params{ip} eq lc $ip) {
+		return IkiWiki::SuccessReason->new("IP is $ip");
+	}
+	else {
+		return IkiWiki::FailReason->new("IP is $params{ip}, not $ip");
+	}
+} #}}}
+
 1
