@@ -2,6 +2,10 @@ ikiwiki (2.67) UNRELEASED; urgency=low
 
   * remove: Avoid $_ breakage. (Stupid, stupid perl.)
   * Updated Spanish translation from Victor Moral.
+  * lockedit: Support specifying which users (and IP addresses) a page
+    is locked for. This supports most of the ACL type things users have been
+    wanting to be done. Closes: #443346 (It does not control who can read a
+    page, but that's out of scope for ikiwiki.)
 
  -- Joey Hess <joeyh@debian.org>  Mon, 06 Oct 2008 16:07:50 -0400
 
